@@ -1,15 +1,13 @@
 package com.sistemapapeleria.Sistema_Papeleria_AURUM_Backend.Servicio.Impl;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-
 import com.sistemapapeleria.Sistema_Papeleria_AURUM_Backend.Entidades.CuentasPagar;
 import com.sistemapapeleria.Sistema_Papeleria_AURUM_Backend.Modelo.CuentasPagarDTO;
 import com.sistemapapeleria.Sistema_Papeleria_AURUM_Backend.Servicio.CuentasPagarService;
 import com.sistemapapeleria.Sistema_Papeleria_AURUM_Backend.repositorio.CuentasPagarRepository;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CuentasPagarServiceImpl implements CuentasPagarService {
@@ -22,14 +20,12 @@ public class CuentasPagarServiceImpl implements CuentasPagarService {
     }
 
     @Override
-    public CuentasPagarDTO saveCuentaPagar(CuentasPagarDTO cuentaDTO) {
+    public CuentasPagarDTO saveCuentaPagar(CuentasPagarDTO dto) {
         CuentasPagar cuenta = new CuentasPagar();
-        cuenta.setProveedorId(cuentaDTO.getProveedorId());
-        cuenta.setMonto(cuentaDTO.getMonto());
-        cuenta.setEstado(cuentaDTO.getEstado());
-        
+        cuenta.setProveedorId(dto.getProveedorId());
+        cuenta.setMonto(dto.getMonto());
+        cuenta.setEstado(dto.getEstado());
         CuentasPagar saved = cuentasPagarRepository.save(cuenta);
-        
         return mapToDTO(saved);
     }
 
@@ -37,14 +33,12 @@ public class CuentasPagarServiceImpl implements CuentasPagarService {
     public List<CuentasPagarDTO> getAllCuentasPagar() {
         return cuentasPagarRepository.findAll().stream()
             .map(this::mapToDTO)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
     public CuentasPagarDTO getCuentaPagarById(Long id) {
-        return cuentasPagarRepository.findById(id)
-            .map(this::mapToDTO)
-            .orElse(null);
+        return cuentasPagarRepository.findById(id).map(this::mapToDTO).orElse(null);
     }
 
     @Override
@@ -52,12 +46,38 @@ public class CuentasPagarServiceImpl implements CuentasPagarService {
         cuentasPagarRepository.deleteById(id);
     }
 
-    private CuentasPagarDTO mapToDTO(CuentasPagar entity) {
+    @Override
+    public CuentasPagarDTO updateCuentaPagar(Long id, CuentasPagarDTO dto) {
+        return cuentasPagarRepository.findById(id).map(cuenta -> {
+            cuenta.setProveedorId(dto.getProveedorId());
+            cuenta.setMonto(dto.getMonto());
+            cuenta.setEstado(dto.getEstado());
+            CuentasPagar actualizado = cuentasPagarRepository.save(cuenta);
+            return mapToDTO(actualizado);
+        }).orElse(null);
+    }
+
+    @Override
+    public List<CuentasPagarDTO> getCuentasByProveedorId(Long proveedorId) {
+        return cuentasPagarRepository.findByProveedorId(proveedorId)
+                .stream().map(this::mapToDTO).collect(Collectors.toList());
+    }
+
+    @Override
+    public CuentasPagarDTO marcarComoPagada(Long id) {
+        return cuentasPagarRepository.findById(id).map(cuenta -> {
+            cuenta.setEstado("PAGADO");
+            cuentasPagarRepository.save(cuenta);
+            return mapToDTO(cuenta);
+        }).orElse(null);
+    }
+
+    private CuentasPagarDTO mapToDTO(CuentasPagar cuenta) {
         CuentasPagarDTO dto = new CuentasPagarDTO();
-        dto.setId(entity.getId());
-        dto.setProveedorId(entity.getProveedorId());
-        dto.setMonto(entity.getMonto());
-        dto.setEstado(entity.getEstado());
+        dto.setId(cuenta.getId());
+        dto.setProveedorId(cuenta.getProveedorId());
+        dto.setMonto(cuenta.getMonto());
+        dto.setEstado(cuenta.getEstado());
         return dto;
     }
 }
